# cover_letter_generator

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/: app.py  auth.py  chain.py  config.py  database.py  job_scraper.py  logging_config.py  models.py  resume_parser.py  service.py
backend/tests/: conftest.py  test_app.py  test_job_scraper.py  test_resume_parser.py  test_service.py
frontend/: Dockerfile  nginx.conf
frontend/src/: App.tsx  api.ts
frontend/src/components/: GenerateForm.tsx  HistoryPanel.tsx  LoginPage.tsx  ResultCard.tsx  Spinner.tsx  UserHeader.tsx
frontend/src/hooks/: useAuth.tsx  useHistory.ts
